--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>React App</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <title>React Table Example</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
